Initial navbar html commit.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,11 @@
-<p>
-  navbar works!
-</p>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-2">
+        <div class="card" id="IOPFilter">
+          <p id="IOPTitle" class="text-left">IOP Updates</p>
+          <button class="btn btn-block" id="dashboardButton">Dashboard</button>
+          <input id="filterInput" class="form-control" placeholder="iop#, order#">
+        </div>
+      </div>
+    </div>
+  </div>
