Initial weathre status commit.

--- a/src/app/weather-status/weather-status.component.html
+++ b/src/app/weather-status/weather-status.component.html
@@ -1,3 +1,5 @@
-<p>
-  weather-status works!
-</p>
+  <div class="ticker-wrap">
+    <div class="ticker">
+      <div class="ticker__item">Weather Weather Weather.</div>
+    </div>
+  </div>
