--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,15 +1,3 @@
-#IOPFilter {
-  background: grey;
-  width: 12em;
-  padding: 0.5em;
-}
-
-#IOPTitle {
+div {
   color: white;
-}
-
-#dashboardButton {
- background: #ed5300;
- color: white;
- margin: 0.5em 0 0.5em 0;
 }
