"title-bar" switched with navbar.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,18 @@
 <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-2">
-        <div class="card" id="IOPFilter">
-          <p id="IOPTitle" class="text-left">IOP Updates</p>
-          <button class="btn btn-block" id="dashboardButton">Dashboard</button>
-          <input id="filterInput" class="form-control" placeholder="iop#, order#">
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="row" style="background: #E65400; padding: 0.2em 0em 0.2em 0em">
+		<div class="col-md-1">
+			<div class="pull-right" style="border: solid 1px white">temp2
+			</div>
+			<div class="col-md-1 col-md-offset-2" style="margin-right:2em">
+				<div class="pull-right" style="border: solid 1px white">bell
+				</div>
+			</div>
+			<div class="col-md-1" id="nav-drop-down">
+				<div class="pull-left" style="border: solid 1px white">temp1
+				</div>
+			</div>
+			<div class="col-md-2">
+				<label>BHP <span>IRIS</span></label>
+			</div>
+		</div>
+	</div>
