--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,7 @@
-<p>
-  home-page works!
-</p>
+<app-navbar></app-navbar>
+<mat-grid-list cols='4' rowHeight='100px'>
+  <mat-grid-tile *ngFor='let tile of tiles' [colspan]='tile.cols' [rowspan]='tile.rows' [style.background]='tile.color'>
+    {{tile.text}}
+  </mat-grid-tile>
+<!--<mat-grid-tile [colspan]='card.inputs.cols.value' [rowspan]='card.inputs.cols.value'></mat-grid-tile>-->
+</mat-grid-list>
