--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,12 @@
 <app-navbar></app-navbar>
+<app-weather-status></app-weather-status>
 <mat-grid-list cols='4' rowHeight='100px'>
-  <mat-grid-tile *ngFor='let tile of tiles' [colspan]='tile.cols' [rowspan]='tile.rows' [style.background]='tile.color'>
-    {{tile.text}}
+  <mat-grid-tile [colspan]='1' [rowspan]='1'>
+    searchhome component
   </mat-grid-tile>
+  <mat-grid-tile [colspan]='3' [rowspan]='8' >
+    dashboard
+  </mat-grid-tile>
+  
 <!--<mat-grid-tile [colspan]='card.inputs.cols.value' [rowspan]='card.inputs.cols.value'></mat-grid-tile>-->
 </mat-grid-list>
