--- a/src/app/weather-status/weather-status.component.html
+++ b/src/app/weather-status/weather-status.component.html
@@ -1,5 +1,5 @@
-  <div class="ticker-wrap">
-    <div class="ticker">
-      <div class="ticker__item">{{ weatherDetail }}</div>
-    </div>
-  </div>
+<div id="tickerwrap">
+  <marquee id="ticker">
+      {{ message }}
+  </marquee>
+</div>
