fixed navbar and started search filter. included request-detail view

--- a/src/app/weather-status/weather-status.component.css
+++ b/src/app/weather-status/weather-status.component.css
@@ -26,6 +26,7 @@
 .ticker-wrap {
   background: grey;
   width: 100%;
+  margin-top: 50px;
   overflow: hidden;
   height: 2rem;
   padding-left: 100%;
