--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,12 +1,20 @@
-<app-navbar></app-navbar>
-<app-weather-status></app-weather-status>
-<mat-grid-list cols='4' rowHeight='100px'>
-  <mat-grid-tile [colspan]='1' [rowspan]='1'>
-    searchhome component
-  </mat-grid-tile>
-  <mat-grid-tile [colspan]='3' [rowspan]='8' >
-    dashboard
-  </mat-grid-tile>
-  
-<!--<mat-grid-tile [colspan]='card.inputs.cols.value' [rowspan]='card.inputs.cols.value'></mat-grid-tile>-->
-</mat-grid-list>
+<app-navbar>
+</app-navbar>
+<div class="fixed-top">
+  <app-weather-status></app-weather-status>
+</div>
+<div id="homepage">
+  <mat-grid-list cols='5'>
+    <mat-grid-tile [colspan]='1' [rowspan]='1'>
+      <input type="number" placeholder="IOP/WO #" autofocus><br>
+      <i class="fas fa-filter"></i>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]='4' [rowspan]='8'>
+      <app-request-detail></app-request-detail>
+    </mat-grid-tile>
+
+    <mat-grid-tile [colspan]='1' [rowspan]='7'>
+      <app-iop-list></app-iop-list>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
