--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,27 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-orange">
+<nav class="navbar fixed-top navbar-dark bg-orange">
 
-	<button class="navbar-toggle collapsed pull-left" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+	<button class="navbar-toggler bg-dark collapsed pull-left" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 	 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
-	<a class="navbar-brand pull-left bg-orange" routerLink="/home">
+	<a class="navbar-brand navbar-left bg-orange text-left" routerLink="/home">
 		{{title}}
-		<span class="badge-primary">{{title2}}</span>
+		<logo>{{title2}}</logo>
 	</a>
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link" routerLink="/home">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" routerLink=""></a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" routerLink=""></a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" routerLink="/logout">Logout</a>
-			</li>
-		</ul>
+	<logo class="pull-left">name here</logo>
+	<div class="dropdown">
+		<button class="btn btn-secondary dropdown-toggle pull-right" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		 actions
+		</button>
+		<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+			<a class="dropdown-item" href="#">logout</a>
+			<a class="dropdown-item" href="#">profile</a>
+		</div>
 	</div>
 </nav>
