Weather ticker fied for latest build.

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <app-navbar>
 </app-navbar>
-<div class="fixed-top">
+<div class="fixed-top" style="margin-top:56px">
   <app-weather-status></app-weather-status>
 </div>
 <div id="homepage">
