--- a/src/app/weather-status/weather-status.component.css
+++ b/src/app/weather-status/weather-status.component.css
@@ -1,36 +1,5 @@
 #ticker {
   width: 100%;
-<<<<<<< HEAD
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #495057;
   color: #fff;
 }
-=======
-  margin-top: 50px;
-  overflow: hidden;
-  height: 2rem;
-  padding-left: 100%;
-  box-sizing: content-box;
-}
-.ticker-wrap .ticker {
-  display: inline-block;
-  height: 2rem;
-  line-height: 2rem;
-  white-space: nowrap;
-  padding-right: 100%;
-  box-sizing: content-box;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-name: ticker;
-  animation-name: ticker;
-  -webkit-animation-duration: 10s;
-  animation-duration: 10s;
-}
-.ticker-wrap .ticker__item {
-  display: inline-block;
-  padding: 0 2rem;
-  font-size: 1.5rem;
-  color: white;
-}
->>>>>>> c12591478ed64678a72be0452379b258ba1cdeee
